# social-autopoiesis-sandbox

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  PROJECT.md  README.md  TEST_INFRA.md  TEST_READY.md  audit_verdict.md  docker-compose.yml  pyproject.toml  requirements.txt
.agents/: AGENTS.md  ORIGINAL_REQUEST.md  hooks.json
.agents/architect_phase2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/architect_phase2_gen2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/architect_reviewer_phase3/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md  review.md
.agents/architect_reviewer_phase3_gen2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md  review.md
.agents/auditor_qa_phase6/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.agents/implementer_phase4/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/orchestrator/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/prd_manager_phase1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/qa_engineer_phase6/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.antigravitycli/: agents.json
.claude/: settings.json
.opencode/: opencode.json
backend/: Dockerfile
config/: agents.yaml
frontend/: .gitignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
scripts/: compare_models.py  run_long_chain.sh  verify_docker_static.py  verify_sigint.sh
(+253 files in other folders)
